# zhongyi-graph

./: .env.example  .gitignore  Makefile  README.md  compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/data/: sample_graph.py
backend/app/models/: graph.py  ingestion.py  query.py
backend/app/services/: chunk_retriever.py  document_parser.py  evidence_service.py  graph_extractor.py  graph_service.py  hybrid_retriever.py  ingestion_repository.py  ingestion_service.py  knowledge_publisher.py  llm.py  model_clients.py  neo4j_publisher.py  object_storage.py  ocr_client.py  question_service.py  vector_service.py
backend/tests/: test_api.py  test_chunk_retriever.py  test_chunk_vector_sync_script.py  test_contracts.py  test_document_parser.py  test_graph_extractor.py  test_hybrid_retrieval.py  test_import_script.py  test_ingestion_models.py  test_ingestion_repository.py  test_ingestion_service.py  test_knowledge_publisher.py  test_literature_import_script.py  test_llm_client.py  test_model_clients.py  test_neo4j_publisher.py  test_object_storage.py  test_ocr_client.py  test_question_service.py  test_seed_artifacts.py  test_vector_service.py
data/seed/: graph.json
docs/superpowers/plans/: 2026-06-23-tcm-kg-platform-mvp.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  apiProxyConfig.ts  main.tsx
scripts/: build_seed_artifacts.py  extract_publish_query_terms.py  import_literature_graphrag.py  import_seed_graph.py  sync_chunk_vectors.py
(+21 files in other folders)
