[project]
name = "tcm-kg-platform-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "neo4j>=5.23.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "minio>=7.2.0",
  "python-multipart>=0.0.9",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = [".", ".."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
